make the application of addresssettings part of _sync_broker_addresses